# AircraftLanderMP

./: .gitignore  CMakeLists.txt  ODEexample.txt  README.md  TODO.txt  main.cpp  mainPart1.py  plot.py
Goal1-PlanInSky/: main.cpp  plot.py
Goal1-PlanInSky/SavedRuns/180Turn/: OutputPath_cont.data  OutputPath_geo.data  start_Goal.txt
Goal1-PlanInSky/SavedRuns/straightFlight/: OutputPath_cont.data  OutputPath_geo.data  Start_Goals.txt
Goal1-PlanInSky/SavedRuns/straightFlightBarelRole/: OutputPath_cont.data  OutputPath_geo.data
Goal2-LandOnGround/: CMakeLists.txt  main.cpp  plot.py
Goal2-LandOnGround/SavedRuns/Landing/: OutputPath_cont.data  OutputPath_geo.data
Goal2-LandOnGround/Tempest/: tempest.cpp
Goal3-LandOnRunway/: main.cpp  plot.py
Goal5-LandOnGroundHybridDynamics/: main.cpp
Goal5-LandOnGroundHybridDynamics/SavedRuns/Landing/: OutputPath_geo.data  run.txt
Goal5-LandOnGroundHybridDynamics/Tempest/: barometric_formula.h  tempest.h
Tempest/: CMakeLists.txt
